# GPU-Access-Router

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_client.py  test_connect.py
specs/001-gpu-router-toolkit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-gpu-router-toolkit/checklists/: requirements.md
specs/001-gpu-router-toolkit/contracts/: cli-schema.md  python-api.md  server-rest-api.md
src/gpu_access_router/: __init__.py  __main__.py  cli.py  config.py  ollama.py
src/gpu_access_router/client/: __init__.py  connectivity.py  poller.py  router.py  routing.py  setup_wizard.py  status.py
src/gpu_access_router/core/: constants.py  exceptions.py
src/gpu_access_router/server/: api.py  doctor.py  queue.py  setup_wizard.py
src/gpu_access_router/shim/: ollama_shim.py
src/gpu_directer/: __init__.py  __main__.py  cli.py  config.py
src/gpu_directer/client/: connectivity.py  poller.py  router.py  routing.py  setup_wizard.py  status.py
src/gpu_directer/core/: constants.py  exceptions.py
src/gpu_directer/server/: __init__.py  api.py  doctor.py  queue.py  setup_wizard.py
src/gpu_directer/shim/: ollama_shim.py
