[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-access-router"
version = "0.1.0"
description = "Route LLM inference to a remote GPU server or fall back to local Ollama automatically"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "tomli>=2.0; python_version<'3.11'",
    "tomli-w>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "ollama>=0.1",
    "httpx>=0.24",
]
client = [
    "ollama>=0.1",
    "httpx>=0.24",
]
all = [
    "gpu-access-router[server,client]",
]

[project.scripts]
gpu-access-router = "gpu_access_router.cli:main"
ollama = "gpu_access_router.shim.ollama_shim:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
